WARNING: Desde aca cambia intranet-tmpl, monotematico y con nuevo diseno #ROCK

--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/add_campo_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/add_campo_esquema.tmpl
@@ -18,7 +18,7 @@
                 <select name="subcampo" id="subcampo" onChange="eleccionSubCampoEsquema()">
                         <option value="-1">[% 'Seleccionar SubCampo' | i18n %]</option>
                     </select>
-                   <strong><span id="liblibrarian"></span></strong>
+                   <strong><span id="liblibrarian_esquema"></span></strong>
             </li>
             <li class="sub_item" id="li_separador">
                 <label for="separador">[% 'Separador' | i18n %]:</label> 
