--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -14,6 +14,7 @@
               style   : 'display: inline',
               submitdata : {token: "[% token %]", edit: '1'},
               indicator : loaderPath,
+              callback: function(){makeDataTable('#tablaResult');},
 
         });
 
