--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -36,6 +36,12 @@
                         <th>
                             [% "Tipo" | i18n %]
                         </th>
+                         <th>
+                            [% "Encontrado" | i18n %]
+                        </th>
+                        <th>
+                            [% "Ignorado" | i18n %]
+                        </th>
                         <th>
                             [% "Acciones" | i18n %]
                         </th>
@@ -59,6 +65,14 @@
                            [% detalle_importacion.getTipo %]
                           [% IF detalle_importacion.getTipo == "Registro" %] ([% detalle_importacion.getCantidadDeRegistrosHijo %] registros)[% END %]
                       </td>
+
+                      <td align="left">
+                        [% IF detalle_importacion.getMatching %]<span class='rojo'>Si</span>[% ELSE %]<span class='verde'>No</span>[% END %]
+                      </td>
+                      <td align="left">
+                        [% IF detalle_importacion.getEstado == "I" %]<span class='rojo'>Si</span>[% ELSE %]<span class='verde'>No</span>[% END %]
+                      </td>
+
                       <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
                       <td align='left' width="9%" >
 
