--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -2,6 +2,7 @@
 
     $(document).ready(function() {
           makeToggle('datos_tabla_div_importacion','trigger',null,false);
+          makeToggle('filtro_importacion','trigger',null,true);
     });
 
 </script>
@@ -11,10 +12,14 @@
 
 <fieldset class="resultados_busqueda">
     <legend class="titulo_legend trigger click">[% "Filtrar" | i18n %]</legend>
-        <div >
-            <input type="radio" name="record_filter" value="MAIN" [% IF record_filter == 'MAIN' or !record_filter %] checked [% END %]onChange="detalleImportacion([% id_importacion %]);">Registros Principales
-            <input type="radio" name="record_filter" value="ALL" [% IF record_filter == 'ALL' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Todos
-            <input type="radio" name="record_filter" value="UNIDENTIFIED" [% IF record_filter == 'UNIDENTIFIED' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Registros Sin Identificar
+        <div class="filtro_importacion">
+            <ul>
+                <li><input type="radio" name="record_filter" value="MAIN" [% IF record_filter == 'MAIN' or !record_filter %] checked [% END %]onChange="detalleImportacion([% id_importacion %]);">Registros Principales</li>
+                <li><input type="radio" name="record_filter" value="ALL" [% IF record_filter == 'ALL' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Todos</li>
+                <li><input type="radio" name="record_filter" value="UNIDENTIFIED" [% IF record_filter == 'UNIDENTIFIED' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Registros Sin Identificar</li>
+                <li><input type="radio" name="record_filter" value="MATCH" [% IF record_filter == 'MATCH' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Registros Encontrados</li>
+                <li><input type="radio" name="record_filter" value="IGNORED" [% IF record_filter == 'IGNORED' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Registros Ignorados</li>
+            </ul>
         </div>
 </fieldset>
 
@@ -85,6 +90,29 @@
                                                                           alternClass   => "botonCentradoTabla",
                                                                       ) ;
 
+                              [% END %]
+                       </div>
+                      <div class="click horizontal icon_mas">
+                              [% IF detalle_importacion.getEstado != "I" %]
+                                  [% PERL %]
+                                              print C4::AR::Filtros::to_Icon(
+                                                                              boton         => "icon_sacar",
+                                                                              onClick       => "cambiarEsdatoRegistro('[% detalle_importacion.getIdImportacionIso %]','[% detalle_importacion.getId %]','I');",
+                                                                              title         => "[% 'Ignorar Registro' | i18n %]",
+                                                                              alternClass   => "botonCentradoTabla",
+                                                                          ) ;
+
+                                  [% END %]
+                              [% ELSE %]
+                                  [% PERL %]
+                                              print C4::AR::Filtros::to_Icon(
+                                                                              boton         => "icon_agregar",
+                                                                              onClick       => "cambiarEsdatoRegistro('[% detalle_importacion.getIdImportacionIso %]','[% detalle_importacion.getId %]','');",
+                                                                              title         => "[% 'No Ignorar Registro' | i18n %]",
+                                                                              alternClass   => "botonCentradoTabla",
+                                                                          ) ;
+
+                                  [% END %]
                               [% END %]
                          </div>
                       </td>
