--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/libre_deuda.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/libre_deuda.tmpl
@@ -58,7 +58,7 @@
               [% "Biblioteca: " | i18n  %] [% biblio.getNombrePDF %]<br>
               [% "Direcci&oacute;n:" | i18n  %]  [% biblio.getDireccionPDF %]<br>
               [% "Tel/Fax:" | i18n  %]  [% biblio.telefono %]  [% IF biblio.fax %] / [% biblio.fax %][% END %]  <br>
-           <!--   [% "Atenci&oacute;n: Lunes a Viernes " | i18n  %][% atencion %] <br>--!>
+              [% "Sitio web:" | i18n  %] [% biblio.url_servidor %]<br>
               [% "E-mail:" | i18n  %] [% biblio.email %]<br>
     </div>
 </fieldset>
